--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -1,4 +1,4 @@
-body {background-color: #FFC072;
+body {background-color: #E1AC51;
 font-family:"Book Antiqua", sans-serif;}
 
 .Info {display:inline;
@@ -17,7 +17,7 @@ font-family:"Book Antiqua", sans-serif;}
 	padding-top:10px;
 	padding-bottom:10px;}
 
-.col-md-3 {border-top: 3px solid #FFC072;
-	border-left: 3px solid #FFC072;}
+.col-md-3 {border-top: 3px solid #E1AC51;
+	border-left: 3px solid #E1AC51;}
 	
 .spacer {padding:25px;}
