--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -8,7 +8,7 @@ font-family:"Book Antiqua", sans-serif;}
 .Info img {
 	position:relative;
 	left:-30px;
-	bottom:-50pxs;}
+	bottom:-5px;}
 .container {
 	background-color: #FDFFBB;
 	border-radius: 10px;}
